src/App.css
/* ... */
.arrow {
  grid-area: arrow;
  justify-self: center;
}

.tech {
  background: #0b24f5;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
  justify-content: center;
  margin-top: 32px;
  padding: 128px 0;
}

.tech h2 {
  font-family: Montserrat, sans-serif;
  font-weight: 700;
  font-size: 56px;
  margin: 0;
  padding: 16px;
  text-align: center;
  line-height: 66px;
}

.tech p {
  font-family: Hind, sans-serif;
  font-size: 18px;
  font-weight: 400;
  line-height: 28.2px;
  margin: 0;
  padding: 16px;
  text-shadow: 1px 2px 2px #00000040;
  max-width: 500px;
}

.featuredProjects {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 32px;
  padding: 128px 0;
}

.featuredProjects h2 {
  font-family: Montserrat, sans-serif;
  font-weight: 700;
  font-size: 56px;
  margin: 0;
  padding: 16px;
  text-align: center;
  color: #0b24f5;
}

.project {
  display: flex;
  flex-direction: column;
  padding: 0 16px;
}

/* list empty selector in the beginning */

.projectImage {
  border-top-width: 0px;
  border-right-width: 0px;
  border-left-width: 10px;
  border-bottom-width: 10px;
  border-style: solid;
  border-color: #0b24f5;
  grid-area: image;
}

.projectTitle {
  margin: 16px 0;
  font-family: Montserrat;
  font-size: 24px;
  font-weight: 600;
  line-height: 29.26px;
  text-align: left;
  grid-area: title;
}

.projectDescription {
  margin: 0;
  font-family: Hind;
  font-size: 18px;
  font-weight: 400;
  line-height: 28.82px;
  text-align: left;
  grid-area: description;
}

.projectTechnologies {
  margin: 10px 0;
  list-style-type: none;
  padding: 0;
  display: flex;
  column-gap: 16px;
  grid-area: technologies;
}

.projectTechnologies li {
  background: black;
  color: white;
  font-family: Montserrat;
  font-size: 16px;
  font-weight: 600;
  line-height: 19.5px;
  text-align: left;
  padding: 4px;
}

.projectLinks {
  margin: 16px 0;
  display: flex;
  flex-direction: column;
  row-gap: 8px;
  grid-area: links;
}

.projectLinks a {
  display: flex;
  column-gap: 8px;
  align-items: center;
  background-color: #f5f5f5;
  width: max-content;
  border-radius: 22px;
  padding: 8px;
  text-decoration: none;
  color: #333333;
  font-family: Montserrat;
  font-size: 20px;
  font-weight: 600;
  line-height: 24.38px;
  text-align: left;

  &:hover {
    background-color: #e5e5e5;
  }
}

.projectDemo {
}

.projectCode {
}

/* copied the image with the waves from the figma file, and made at to an repeated background  img.  */
.waves {
  max-width: 100%;
  height: 13px;
  background-image: url(/waves.png);
  background-repeat: repeat-x;
  position: absolute;
  left: 0;
  right: 0;
  margin-top: -6px;
}

.myWords {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 32px;
  padding: 128px 0;
  background-color: #ffecea;
}

.myWords h2 {
  font-family: Montserrat, sans-serif;
  font-weight: 700;
  font-size: 56px;
  margin: 0;
  padding: 16px;
  text-align: center;
  color: #ff4575;
  line-height: 66px;
}

.posts {
  display: flex;
  flex-direction: column;
  row-gap: 64px;
}

.post {
  padding: 0 16px;
}

.postImage {
  border-top-width: 0px;
  border-right-width: 0px;
  border-left-width: 16px;
  border-bottom-width: 16px;
  border-style: solid;
  border-color: #ff4575;
  grid-area: image;
  width: 100%;
}

.postDate {
  font-family: Montserrat;
  font-size: 16px;
  font-weight: 600;
  line-height: 19.5px;
  background: black;
  color: white;
  padding: 4px;
  margin-top: 16px;
  display: inline-block;
}

.postTitle {
  font-family: Montserrat;
  font-size: 24px;
  font-weight: 600;
  line-height: 29.26px;
  text-align: left;
  margin-top: 9px;
}

.postDescription {
  font-family: Hind;
  font-size: 18px;
  font-weight: 400;
  line-height: 28.82px;
  text-align: left;
}

.postLink {
  display: flex;
  column-gap: 8px;
  align-items: center;
  background-color: #fff;
  width: max-content;
  border-radius: 32px;
  padding: 16px;
  text-decoration: none;
  color: #333333;
  font-family: Montserrat;
  font-size: 20px;
  font-weight: 600;
  line-height: 24.38px;
  text-align: left;
  &:hover {
    background-color: #e5e5e5;
  }
}

.skills {
  background-color: hsl(234, 92%, 50%);
  color: white;
  padding: 64px 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.skills h2 {
  font-family: Montserrat, sans-serif;
  font-weight: 700;
  font-size: 56px;
  margin: 0;
  padding: 16px;
  text-align: center;
  line-height: 66px;
}

.skillsCategories {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.skillsCategory {
}

.skillsCategory h3 {
  font-family: Montserrat;
  font-size: 24px;
  font-weight: 600;
  line-height: 29.26px;
  text-align: center;
  display: inline-block;
  padding: 2px;
}

.skillsCategory:nth-child(1) h3 {
  background: #eb5577;
}

.skillsCategory:nth-child(2) h3 {
  background: #2483e0;
}

.skillsCategory:nth-child(3) h3 {
  background: #6db486;
}

.skillsCategory:nth-child(4) h3 {
  background: #ffde30;
  color: #0b24f5;
}

.skills ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.skills li {
  font-family: Hind;
  font-size: 18px;
  font-weight: 400;
  line-height: 28.82px;
  text-align: center;
}

.letsTalk {
  padding: 64px 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  row-gap: 32px;
}

.letsTalk h2 {
  font-family: Montserrat;
  font-size: 56px;
  font-weight: 700;
  line-height: 66px;
  text-align: center;
}

.letsTalkAvatar {
  border-radius: 50%;
  height: 164px;
  width: 164px;
}

.letsTalkText {
  font-family: Montserrat;
  font-size: 20px;
  font-weight: 600;
  line-height: 29.26px;
  text-align: center;
}

.letsTalkIcons {
  align-items: center;
  display: flex;
  column-gap: 16px;
}

.marquee {
  background: #ff4575;
  color: white;
  font-family: Montserrat;
  font-size: 26.04px;
  font-weight: 600;
  line-height: 37.87px;
  text-align: left;
  padding: 16px;
}
/* ... */

